--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
     "hardhat": "^2.8.0",
+    "hardhat-gas-reporter": "^2.0.2",
     "html-webpack-plugin": "^5.6.0",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.4.0",
